<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_cleaner</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling turtlesim</description>
  <maintainer email="ganesh@example.com">Ganesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

